--- a/trunk/proj.win32/Ghosts.vcxproj.filters
+++ b/trunk/proj.win32/Ghosts.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClCompile Include="..\Classes\CollisionDetection.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\ParseClient.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\RankDialog.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -120,6 +126,12 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\CollisionDetection.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ParseClient.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\RankDialog.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
